--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 body {
 	font-family: 'Montserrat', sans-serif; 
-	background-color: #f8f8ff; 
+	background-color: #e5e6e7; 
 	margin: 6% 20%;
 	}
 
