--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,13 +1,13 @@
 body {
 	font-family: 'Montserrat', sans-serif; 
-	background-color: #f5f8f9; 
+	background-color: #ffffff; 
 	margin: 6% 20%;
 	}
 
 h1 {
 	font-size: 52px;
 	font-family: 'Roboto Mono', monospace;
-	background-color: #f5f8f9;
+	background-color: #ffffff;
 	text-align: center;
 	}
 
