--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,14 +38,14 @@ p {
 	}
 
 a {
-	color: red; 
+	color: #f03434; 
 	font-weight: normal; 
 	font-size: 20px; 
 	text-decoration: none;
 	}
 
 a:hover { 
-	color: red; 
+	color: #f03434; 
 	font-weight: normal; 
 	font-size: 20px; 
 	text-decoration: underline;
