--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,6 @@
 body {
-	font-family: 'Montserrat', sans-serif; 
+	font-family: Duospace;
+    	src: url("daanvanmonsjou.nl/files/iAWriterDuospace-Regular.ttf") format('truetype');
 	background-color: #ffffff; 
 	margin: 6% 20%;
 	}
