--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,7 +35,8 @@ h4 {
 	
 p {
 	font-size: 20px;
-	font-family: 'Open Sans', sans-serif;
+	font-family: Duospace;
+    	src: url("daanvanmonsjou.nl/files/iAWriterDuospace-Regular.ttf") format('truetype');
 	}
 
 a {
