--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,9 @@
+
 body {
+	font-family: 'Montserrat', sans-serif; 
 	background-color: #ffffff; 
 	margin: 6% 20%;
 	}
-
-@font-face {
-	font-family: Duospace; src: url('daanvanmonsjou.nl/files/iAWriterDuospace-Regular.ttf';}
 
 h1 {
 	font-size: 52px;
@@ -12,7 +11,7 @@ h1 {
 	background-color: #ffffff;
 	text-align: center;
 	}
-
+	
 h2 {
 	font-size: 32px; 
 	font-family: 'Roboto Mono', monospace; 
