--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,7 +28,7 @@ h3 {
 
 h4 {
 	font-size: 22px;
-	font-family: 'Roboto Mono', monospace; 
+	font-family: 'iA Writer Duospace', monospace;
 	color: black; 
 	text-align: left;
 }
