--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,13 +28,13 @@ h3 {
 
 h4 {
 	font-size: 22px;
-	font-family: 'iA Writer Duospace', monospace;
+	font-family: 'Roboto Mono', monospace;
 	color: black; 
 	text-align: left;
 }
 	
 p {
- 	font-family: 'iA Writer Duospace Regular'; 
+	font-family: 'iA Writer Duospace', monospace;
 	font-size: 20px;
 }
 
