--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,7 @@
 body {
 	font-family: 'iA Writer Duospace', monospace;
 	font-size: 22px;
+	font-weight: 400;
 	background-color: #ffffff; 
 	margin: 6% 20%;
 	}
