--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,7 @@
 
 body {
-	font-family: 'iA Writer Duospace', monospace;
-	font-size: 22px;
-	font-weight: 400;
+	font-family: 'Montserrat', sans-serif; 
+	font-size: 20px;
 	background-color: #ffffff; 
 	margin: 6% 20%;
 	}
@@ -36,24 +35,21 @@ h4 {
 }
 	
 p {
-	font-family: 'iA Writer Duospace', monospace;
-	font-size: 22px;
-	font-weight: 400;
-
+	font-family: 'Montserrat', sans-serif; 
+	font-size: 20px;
 }
 
 a {
 	color: #f22613; 
 	font-weight: normal; 
-	font-size: 22px; 
+	font-size: 20px; 
 	text-decoration: none;
 	}
 
 a:hover { 
 	color: #f22613; 
 	font-weight: normal; 
-	font-size: 22px; 
-	font-weight: 400;
+	font-size: 20px; 
 	text-decoration: underline;
 	}
 
@@ -74,6 +70,5 @@ code {
 	color: #f22613; 
 	font-weight: normal; 
 	font-size: 20px; 
-	font-weight: 400;
 	text-decoration: none;
 }
