--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,7 +36,7 @@ h4 {
 }
 	
 p {
-	font-family: 'Open Sans', monospace; 
+	font-family: 'Open Sans', sans-serif; 
 	font-size: 20px;
 	line-height: 1.2;
 }
