--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 
 body {
-	font-family: 'Montserrat', sans-serif; 
+   	font-family: 'Source Sans Pro', sans-serif;
 	font-size: 20px;
 	background-color: #ffffff; 
 	margin: 6% 20%;
@@ -9,34 +9,34 @@ body {
 
 h1 {
 	font-size: 52px;
-	font-family: 'Roboto Mono', monospace;
+	font-family: 'Roboto Slab', serif;
 	background-color: #ffffff;
 	text-align: center;
 	}
 	
 h2 {
 	font-size: 32px; 
-	font-family: 'Roboto Mono', monospace; 
+	font-family: 'Roboto Slab', serif;
 	color: #696969; 
 	text-align: center;
 	}
 
 h3 {
 	font-size: 32px; 
-	font-family: 'Roboto Mono', monospace; 
+	font-family: 'Roboto Slab', serif;
 	color: #696969; 
 	text-align: left;
 }
 
 h4 {
 	font-size: 22px;
-	font-family: 'Roboto Mono', monospace;
+	font-family: 'Roboto Slab', serif;
 	color: black; 
 	text-align: left;
 }
 	
 p {
-	font-family: 'Open Sans', sans-serif; 
+   	font-family: 'Source Sans Pro', sans-serif;
 	font-size: 20px;
 	line-height: 1.2;
 }
