--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 
 body {
-   	font-family: 'Source Sans Pro', sans-serif;
+    	font-family: 'Sen', sans-serif;
 	font-size: 22px;
 	background-color: #ffffff; 
 	margin: 6% 20%;
@@ -9,7 +9,7 @@ body {
 
 h1 {
 	font-size: 52px;
-	font-family: 'Roboto Slab', serif;
+	font-family: 'Ubuntu Mono', monospace;
 	background-color: #ffffff;
 	text-align: center;
 	}
@@ -36,7 +36,7 @@ h4 {
 }
 	
 p {
-   	font-family: 'Source Sans Pro', sans-serif;
+    	font-family: 'Sen', sans-serif;
 	font-size: 22px;
 	line-height: 1.2;
 }
