--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@ body {
 
 h1 {
 	font-size: 52px;
-	font-family: 'Ubuntu Mono', monospace;
+	font-family: 'Source Sans Pro', sans-serif;
 	background-color: #ffffff;
 	text-align: center;
 	}
