--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,14 +23,14 @@ h2 {
 
 h3 {
 	font-size: 32px; 
-	font-family: 'Roboto Slab', serif;
+	font-family: 'Source Sans Pro', sans-serif;
 	color: #696969; 
 	text-align: left;
 }
 
 h4 {
 	font-size: 22px;
-	font-family: 'Ubuntu Mono', monospace;
+	font-family: 'Source Sans Pro', sans-serif;
 	color: black; 
 	text-align: left;
 }
