--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,28 +9,28 @@ body {
 
 h1 {
 	font-size: 52px;
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	background-color: #ffffff;
 	text-align: center;
 	}
 	
 h2 {
 	font-size: 32px; 
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	color: #696969; 
 	text-align: center;
 	}
 
 h3 {
 	font-size: 32px; 
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	color: #696969; 
 	text-align: left;
 }
 
 h4 {
 	font-size: 22px;
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	color: black; 
 	text-align: left;
 }
