--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,7 +29,7 @@ h3 {
 
 h4 {
 	font-size: 22px;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Source Sans Pro', sans-serif;
 	color: black; 
 	text-align: left;
 }
