--- a/stylesheet.css
+++ b/stylesheet.css
@@ -81,3 +81,20 @@ code {
 #uniquename {
 	display: none;
 }
+
+#hover-area {
+	text-align:center;
+  margin: 0 auto;
+  display: block;
+	width:500px;
+	height:125px;
+}
+
+#reveal {
+	background: #fafafa;
+	width: 100%;
+	display: none;
+	border-radius: 3px;
+  box-shadow: 1px 1px 3px #555;
+  padding: 25px;
+}
