--- a/stylesheet.css
+++ b/stylesheet.css
@@ -83,18 +83,32 @@ code {
 }
 
 #hover-area {
-	text-align:center;
-  margin: 0 auto;
-  display: block;
-	width:500px;
-	height:125px;
+	text-align:left;
+  	display: block;
+	color: #f22613; 
+	font-weight: normal; 
+	font-size: 20px; 
+	text-decoration: none;
 }
 
 #reveal {
-	background: #fafafa;
-	width: 100%;
-	display: none;
-	border-radius: 3px;
+display: none;
+border-radius: 3px;
   box-shadow: 1px 1px 3px #555;
   padding: 25px;
+}
+
+#telefoonklik {
+	display: block;
+	text-align:left;
+  	display: block;
+	color: #f22613; 
+	font-weight: normal; 
+	font-size: 20px; 
+	text-decoration: none;
+	-webkit-transition: all 300ms;
+	-moz-transition: all 300ms;
+	transition: all 300ms;
+	margin: 0 auto;
+	padding: 0;	
 }
