--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,14 +42,14 @@ p {
 
 a {
 	color: #bf616a; 
-	font-weight: normal; 
+	font-weight: bold; 
 	font-size: 20px; 
 	text-decoration: none;
 	}
 
 a:hover { 
 	color: #bf616a; 
-	font-weight: normal; 
+	font-weight: bold; 
 	font-size: 20px; 
 	text-decoration: underline;
 	}
@@ -74,7 +74,7 @@ footer {
 
 #mail {
 	color: #bf616a; 
-	font-weight: normal; 
+	font-weight: bold; 
 	font-size: 20px; 
 	text-decoration: none;
 }
