--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,14 +41,14 @@ p {
 }
 
 a {
-	color: #bf616a; 
+	color: #5e81ac; 
 	font-weight: bold; 
 	font-size: 20px; 
 	text-decoration: none;
 	}
 
 a:hover { 
-	color: #bf616a; 
+	color: #5e81ac; 
 	font-weight: bold; 
 	font-size: 20px; 
 	text-decoration: underline;
