--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@
 body {
     	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
-	background-color: #eceff4; 
+	background-color: #ffffff; 
 	margin: 4% 24%;
 	}
 
