--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@
 body {
     	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
-	background-color: #ffffff; 
+	background-color: #282a36; 
 	margin: 4% 24%;
 	}
 
@@ -38,10 +38,11 @@ p {
     	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
 	line-height: 1.2;
+	color: #f8f8f2;
 }
 
 a {
-	color: #f22613; 
+	color: #bd93f9; 
 	font-weight: normal; 
 	font-size: 20px; 
 	text-decoration: none;
