--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@ body {
 h1 {
 	font-size: 52px;
 	font-family: 'Montserrat', sans-serif;
-	background-color: #black;
+	background-color: #6272a4;
 	text-align: center;
 	}
 	
