--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,14 +9,14 @@ body {
 h1 {
 	font-size: 52px;
 	font-family: 'Montserrat', sans-serif;
-	background-color: #6272a4;
+	color: #6272a4;
 	text-align: center;
 	}
 	
 h2 {
 	font-size: 34px; 
 	font-family: 'Montserrat', sans-serif;
-	color: #696969; 
+	color: #6272a4; 
 	text-align: center;
 	}
 
@@ -30,7 +30,7 @@ h3 {
 h4 {
 	font-size: 24px;
 	font-family: 'Source Sans Pro', sans-serif;
-	color: black; 
+	color: #black; 
 	text-align: left;
 }
 	
