--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,7 @@ h2 {
 h3 {
 	font-size: 32px; 
 	font-family: 'Montserrat', sans-serif;
-	color: #696969; 
+	color: #6272a4; 
 	text-align: left;
 }
 
