--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,21 +9,21 @@ body {
 h1 {
 	font-size: 52px;
 	font-family: 'Montserrat', sans-serif;
-	color: #6272a4;
+	color: #f8f8f2;
 	text-align: center;
 	}
 	
 h2 {
 	font-size: 34px; 
 	font-family: 'Montserrat', sans-serif;
-	color: #6272a4; 
+	color: #f8f8f2; 
 	text-align: center;
 	}
 
 h3 {
 	font-size: 32px; 
 	font-family: 'Montserrat', sans-serif;
-	color: #6272a4; 
+	color: #f8f8f2; 
 	text-align: left;
 }
 
