--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,18 +1,6 @@
 
 body {
-    	font-family: 'Open Sans', sans-serif; ul {
-  list-style: none; /* Remove default bullets */
-}
-
-ul li::before {
-  content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
-  color: red; /* Change the color */
-  font-weight: bold; /* If you want it to be bold */
-  display: inline-block; /* Needed to add space between the bullet and the text */
-  width: 1em; /* Also needed for space (tweak if needed) */
-  margin-left: -1em; /* Also needed for space (tweak if needed) */
-}
-
+    	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
 	background-color: #282a36; 
 	margin: 4% 24%;
