--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@ body {
 h1 {
 	font-size: 52px;
 	font-family: 'Montserrat', sans-serif;
-	color: #f8f8f2;
+	color: #50fa7b;
 	text-align: center;
 	}
 	
@@ -50,7 +50,7 @@ a {
 	}
 
 a:hover { 
-	color: #f22613; 
+	color: #6272a4; 
 	font-weight: normal; 
 	font-size: 20px; 
 	text-decoration: underline;
@@ -115,7 +115,7 @@ ul li::before {
 
 #reveal {
 display: none;
-	color: black;
+	color: black;#6272a4
 	padding: 1%;
 }
 
