--- a/stylesheet.css
+++ b/stylesheet.css
@@ -107,7 +107,7 @@ ul li::before {
 #hover-area {
 	text-align:left;
   	display: block;
-	color: #f22613; 
+	color: #bd93f9; 
 	font-weight: normal; 
 	font-size: 20px; 
 	text-decoration: none;
@@ -115,7 +115,7 @@ ul li::before {
 
 #reveal {
 display: none;
-	color: black;#6272a4
+	color: #f8f8f2;
 	padding: 1%;
 }
 
