--- a/stylesheet.css
+++ b/stylesheet.css
@@ -123,7 +123,7 @@ display: none;
 	display: block;
 	text-align:left;
   	display: block;
-	color: #f8f8f2; 
+	color: #bd93f9; 
 	font-weight: normal; 
 	font-size: 20px; 
 	text-decoration: none;
