--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,7 @@ h2 {
 h3 {
 	font-size: 32px; 
 	font-family: 'Montserrat', sans-serif;
-	color: #f8f8f2; 
+	color: #50fa7b; 
 	text-align: left;
 }
 
