--- a/stylesheet.css
+++ b/stylesheet.css
@@ -50,7 +50,7 @@ a {
 	}
 
 a:hover { 
-	color: #6272a4; 
+	color: #f8f8f2; 
 	font-weight: normal; 
 	font-size: 20px; 
 	text-decoration: underline;
