--- a/stylesheet.css
+++ b/stylesheet.css
@@ -43,14 +43,14 @@ p {
 }
 
 a {
-	color: #bd93f9; 
+	color: #8be9fd	; 
 	font-weight: normal; 
 	font-size: 20px; 
 	text-decoration: none;
 	}
 
 a:hover { 
-	color: #f8f8f2; 
+	color: #bd93f9; 
 	font-weight: normal; 
 	font-size: 20px; 
 	text-decoration: underline;
