--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,3 @@
-
 body {
     	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
@@ -43,14 +42,14 @@ p {
 }
 
 a {
-	color: #ff79c6; 
+	color: #bd93f9; 
 	font-weight: normal; 
 	font-size: 20px; 
 	text-decoration: none;
 	}
 
 a:hover { 
-	color: #bd93f9; 
+	color: #f8f8f2; 
 	font-weight: normal; 
 	font-size: 20px; 
 	text-decoration: underline;
@@ -123,7 +122,7 @@ display: none;
 	display: block;
 	text-align:left;
   	display: block;
-	color: #8be9fd; 
+	color: #bd93f9; 
 	font-weight: normal; 
 	font-size: 20px; 
 	text-decoration: none;
@@ -133,4 +132,3 @@ display: none;
 	margin: 0 auto;
 	padding: 0;	
 }
-
