--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,14 +1,14 @@
 body {
     	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
-	background-color: #282a36; 
+	background-color: #434c5e; 
 	margin: 4% 24%;
 	}
 
 h1 {
 	font-size: 52px;
 	font-family: 'Montserrat', sans-serif;
-	color: #50fa7b;
+	color: #b48ead;
 	text-align: center;
 	}
 	
@@ -22,7 +22,7 @@ h2 {
 h3 {
 	font-size: 32px; 
 	font-family: 'Montserrat', sans-serif;
-	color: #50fa7b; 
+	color: #bf616a; 
 	text-align: left;
 }
 
@@ -42,7 +42,7 @@ p {
 }
 
 a {
-	color: #bd93f9; 
+	color: #ebcb8b; 
 	font-weight: normal; 
 	font-size: 20px; 
 	text-decoration: none;
