--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 body {
     	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
-	background-color: #434c5e; 
+	background-color: #2e3440; 
 	margin: 4% 24%;
 	}
 
@@ -38,7 +38,7 @@ p {
 	font-size: 20px;
 	line-height: 1.2;
 	color: #f8f8f2;
-	background-color: #282a36;
+	background-color: #2e3440;
 }
 
 a {
