--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,28 +1,28 @@
 body {
     	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
-	background-color: #2e3440; 
+	background-color: #eceff4; 
 	margin: 4% 24%;
 	}
 
 h1 {
 	font-size: 52px;
 	font-family: 'Montserrat', sans-serif;
-	color: #b48ead;
+	color: #2e3440;
 	text-align: center;
 	}
 	
 h2 {
 	font-size: 34px; 
 	font-family: 'Montserrat', sans-serif;
-	color: #f8f8f2; 
+	color: #5e81ac; 
 	text-align: center;
 	}
 
 h3 {
 	font-size: 32px; 
 	font-family: 'Montserrat', sans-serif;
-	color: #bf616a; 
+	color: #5e81ac; 
 	text-align: left;
 }
 
@@ -42,7 +42,7 @@ p {
 }
 
 a {
-	color: #ebcb8b; 
+	color: #b48ead; 
 	font-weight: normal; 
 	font-size: 20px; 
 	text-decoration: none;
