--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,21 +1,21 @@
 body {
     	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
-	background-color: #eceff4; 
+	background-color: #2e3440; 
 	margin: 4% 24%;
 	}
 
 h1 {
 	font-size: 52px;
 	font-family: 'Montserrat', sans-serif;
-	color: #2e3440;
+	color: #eceff4;
 	text-align: center;
 	}
 	
 h2 {
 	font-size: 34px; 
 	font-family: 'Montserrat', sans-serif;
-	color: #5e81ac; 
+	color: #eceff4; 
 	text-align: center;
 	}
 
@@ -37,7 +37,7 @@ p {
     	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
 	line-height: 1.2;
-	color: #f8f8f2;
+	color: #eceff4;
 	background-color: #2e3440;
 }
 
@@ -114,7 +114,7 @@ ul li::before {
 
 #reveal {
 display: none;
-	color: #f8f8f2;
+	color: #88c0d0;
 	padding: 1%;
 }
 
