--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,28 +1,28 @@
 body {
     	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
-	background-color: #2e3440; 
+	background-color: #282a36; 
 	margin: 4% 24%;
 	}
 
 h1 {
 	font-size: 52px;
 	font-family: 'Montserrat', sans-serif;
-	color: #eceff4;
+	color: #50fa7b;
 	text-align: center;
 	}
 	
 h2 {
 	font-size: 34px; 
 	font-family: 'Montserrat', sans-serif;
-	color: #eceff4; 
+	color: #f8f8f2; 
 	text-align: center;
 	}
 
 h3 {
 	font-size: 32px; 
 	font-family: 'Montserrat', sans-serif;
-	color: #5e81ac; 
+	color: #50fa7b; 
 	text-align: left;
 }
 
@@ -37,12 +37,12 @@ p {
     	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
 	line-height: 1.2;
-	color: #eceff4;
-	background-color: #2e3440;
+	color: #f8f8f2;
+	background-color: #282a36;
 }
 
 a {
-	color: #b48ead; 
+	color: #50fa7b; 
 	font-weight: normal; 
 	font-size: 20px; 
 	text-decoration: none;
@@ -114,7 +114,7 @@ ul li::before {
 
 #reveal {
 display: none;
-	color: #88c0d0;
+	color: #f8f8f2;
 	padding: 1%;
 }
 
