--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,7 +42,7 @@ p {
 }
 
 a {
-	color: #50fa7b; 
+	color: #ff79c6; 
 	font-weight: normal; 
 	font-size: 20px; 
 	text-decoration: none;
@@ -122,7 +122,7 @@ display: none;
 	display: block;
 	text-align:left;
   	display: block;
-	color: #bd93f9; 
+	color: #ff79c6; 
 	font-weight: normal; 
 	font-size: 20px; 
 	text-decoration: none;
