--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,7 +22,7 @@ h2 {
 h3 {
 	font-size: 32px; 
 	font-family: 'Montserrat', sans-serif;
-	color: #F4F4F4; 
+	color: #FF6B6B; 
 	text-align: left;
 }
 
