--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,28 +1,28 @@
 body {
     	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
-	background-color: #f4f4f4; 
+	background-color: #282a36; 
 	margin: 4% 24%;
 	}
 
 h1 {
 	font-size: 52px;
 	font-family: 'Montserrat', sans-serif;
-	color: #ff6b6b;
+	color: #50fa7b;
 	text-align: center;
 	}
 	
 h2 {
 	font-size: 34px; 
 	font-family: 'Montserrat', sans-serif;
-	color: #f4f4f4; 
+	color: #f8f8f2; 
 	text-align: center;
 	}
 
 h3 {
 	font-size: 32px; 
 	font-family: 'Montserrat', sans-serif;
-	color: #ff6b6b; 
+	color: #50fa7b; 
 	text-align: left;
 }
 
@@ -37,12 +37,12 @@ p {
     	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
 	line-height: 1.2;
-	color: #333333;
-	background-color: #F4F4F4;
+	color: #f8f8f2;
+	background-color: #282a36;
 }
 
 a {
-	color: #ffd700; 
+	color: #8be9fd; 
 	font-weight: normal; 
 	font-size: 20px; 
 	text-decoration: none;
