--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,35 +1,35 @@
 body {
     	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
-	background-color: #282a36; 
+	background-color: #f8f9fb; 
 	margin: 4% 24%;
 	}
 
 h1 {
 	font-size: 52px;
 	font-family: 'Montserrat', sans-serif;
-	color: #50fa7b;
+	color: #5e81ac;
 	text-align: center;
 	}
 	
 h2 {
 	font-size: 34px; 
 	font-family: 'Montserrat', sans-serif;
-	color: #f8f8f2; 
+	color: #2e3440; 
 	text-align: center;
 	}
 
 h3 {
 	font-size: 32px; 
 	font-family: 'Montserrat', sans-serif;
-	color: #50fa7b; 
+	color: #5e81ac; 
 	text-align: left;
 }
 
 h4 {
 	font-size: 24px;
 	font-family: 'Source Sans Pro', sans-serif;
-	color: #f8f8f2; 
+	color: #4c566a; 
 	text-align: left;
 }
 	
@@ -37,8 +37,8 @@ p {
     	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
 	line-height: 1.2;
-	color: #f8f8f2;
-	background-color: #282a36;
+	color: #4c566a;
+	background-color: #f8f9fb;
 }
 
 nav {
@@ -49,7 +49,7 @@ nav {
 }
 
 nav a {
-	color: white;
+	color: f8f9fb;
 	margin: 0 15px;
 	text-decoration: none;
 }
