--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,9 +42,12 @@
         margin: 40px auto;
         padding: 20px;
     }
-	h1 {
-		font-size:2.0em;
-		color: #4c566a;
+h1 {
+	font-size:2.0em;
+	color: #4c566a;
+	margin-bottom: 15px;
+        border-bottom: 2px solid #333;
+        padding-bottom: 5px;
 	}
     h2 {
 		font-size:1.4em;
