--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,8 +22,10 @@
         margin: 0 auto;
     }
     header h1 {
-        font-size: 2.0em;
-	color: #ffffff;
+        color: #fff;
+        text-decoration: none;
+        font-size: 1.0em;
+        font-weight: bold;
     }
     nav ul {
         display: flex;
