--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,36 +3,41 @@
         margin: 0;
         padding: 0;
     }
+    html, body {
+        height: 100%;
+    }
     body {
         font-family: 'Arial', sans-serif;
         background-color: #ffffff;
         color: #333;
         line-height: 1.6;
+        display: flex;
+        flex-direction: column;
     }
-    header {
+    .container {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+    }
+    header, footer {
         background: #2e3440;
         color: white;
         padding: 10px 20px;
+        text-align: center;
     }
-    .header-container {
+    .header-container, .footer-container {
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
         max-width: 900px;
         margin: 0 auto;
-    }
-    header h1 {
-        color: #fff;
-        text-decoration: none;
-        font-size: 1.0em;
-        font-weight: bold;
     }
     nav ul {
         display: flex;
         list-style: none;
     }
     nav ul li {
-        margin-left: 24px;
+        margin-left: 20px;
     }
     nav ul li a {
         color: #fff;
@@ -44,8 +49,9 @@
         max-width: 900px;
         margin: 40px auto;
         padding: 20px;
+        flex: 1;
     }
-h1 {
+	h1 {
 	font-size:2.0em;
 	color: #4c566a;
 	}
@@ -63,7 +69,7 @@ h1 {
     }
     p {
         margin-bottom: 15px;
-		font-size:1.1em;
+		font-size: 1.1em;
     }
     ul {
         list-style: none;
@@ -80,25 +86,18 @@ h1 {
     ul li a:hover {
         text-decoration: underline;
     }
-    .about {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+    .footer-link {
+        color: white;
+        text-decoration: none;
+        font-size: 1em;
     }
-    .about-text {
-        flex: 1;
-        padding-right: 20px;
+    .footer-link:hover {
+        text-decoration: underline;
     }
-    .about-image img {
-        max-width: 150px;
-        height: auto;
-        border-radius: 5px;
+    footer {
+        margin-top: auto;
+        width: 100%;
     }
-	.portfolio li {
-		list-style-type: disc;
-		list-style-position: inside;
-		font-size: 0.9em;
-		}
 	code {
 		background-color: #2e3440;
 		border-radius: 5px;
@@ -106,41 +105,3 @@ h1 {
 		color: #ffffff;
 		font-size:1.2em;
 }
-ul {
-	font-size:1.2em;
-}
-a {
-	color: #5e81ac; 
-	font-size:1.0em;
-	}
-    footer {
-        background: #2e3440;
-        color: white;
-        padding: 0px 10px;
-		font-weight: bold;
-		font-size: 1.0em;
-		position: fixed;
-		bottom:0;
-		width: 100%;
-		text-align: center;
-    }
-    .footer-container {
-        display: flex;
-        justify-content: space-between;
-        align-items: right;
-        max-width: 900px;
-        margin: 0 auto;
-    }
-    footer h1 {
-        color: #fff;
-        text-decoration: none;
-        font-size: 0.7em;
-        font-weight: bold;
-    }
-
-    footer ul li a {
-        color: #fff;
-        text-decoration: none;
-        font-size: 0.85em;
-        font-weight: bold;
-    }
