--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,6 +31,7 @@
         align-items: center;
         max-width: 900px;
         margin: 0 auto;
+	color: #fff;
     }
     nav ul {
         display: flex;
@@ -42,7 +43,7 @@
     nav ul li a {
         color: #fff;
         text-decoration: none;
-        font-size: 1.0em;
+        font-size: 1.1em;
         font-weight: bold;
     }
     main {
@@ -56,11 +57,11 @@
 	color: #4c566a;
 	}
     h2 {
-		font-size:1.4em;
+	font-size:1.4em;
         margin-bottom: 15px;
         border-bottom: 2px solid #333;
         padding-bottom: 5px;
-		color: #4c566a;
+	color: #4c566a;
     }
 	h3 {
 		font-size:1.2em;
