--- a/stylesheet.css
+++ b/stylesheet.css
@@ -107,6 +107,10 @@
 		color: #ffffff;
 		font-size:1.2em;
 }
+	footer a {
+		font-size: 0.85em;
+		color: white;
+	}
 a {
 	color: #5e81ac; 
 	font-size:1.0em;
