--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,7 +38,8 @@
         list-style: none;
     }
     nav ul li {
-        margin-left: 20px;
+        margin-left: 10px;
+	margin-right: 10px;
     }
     nav ul li a {
         color: #fff;
